1998-10-29    <jrb@aware-of-vacuity.labs.redhat.com>

	* gtk-socket.c: Remove #define DEBUG_PLUGSOCKET

1998-10-28  Federico Mena Quintero  <federico@nuclecu.unam.mx>

	* gnome-app-helper.c (create_menu_item): i8l_label must be a
	string, not a GtkWidget *.

	* gnome-about.c (gnome_about_calc_size): Made static.
	(gnome_destroy_about): Likewise.

	* gnome-app.c (locations): Made const.

	* gnome-mdi.c (target_table): Made const.

	* gnome-client.c (arguments parser): Made const.

	* gnome-init.c (our_gtk_options our_gtk_parser): Made const.

	* makeenums.pl (parse_entries): Output the arrays of enumerations
	as const.

	* gnome-calculator.c (buttons): Made the buttons array const so
	that it can be shared.

	* gnome-lamp.c: Made the lamp data and enl_mappings const so that
	they can be shared.

	* gnome-stock.c (entries_data default_accel_hash): Made the list
	of entries const so that it can be shared between processes.

1998-10-28  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* gnome-mdi.[ch] (gnome_mdi_register, gnome_mdi_unregister):
	changed parameter from GtkWidget*  to GtkObject*.

1998-10-27  Federico Mena Quintero  <federico@nuclecu.unam.mx>

	* gnome-icon-item.c (get_bounds): New internal function to compute
	the bounding box of the icon text item.
	(recompute_bounding_box): Use get_bounds().
	(gnome_icon_text_item_get_type): The object initialization
	function did nothing, so removed it and use NULL instead.
	(iti_bounds): Use get_bounds() and return the correct bounds.

1998-10-27  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* gnome-icon-item.c (iti_bounds): Realize the item if we are asked
	for the bounds before realization.  Federico, this fixes the
	problem you had without having to connect to the realize signal
	(which should be very expensive in terms of memory use for every
	icon). 

	(iti_realize): Remove unused Window
	parameter. 

Mon Oct 26 16:53:04 1998  Owen Taylor  <otaylor@redhat.com>
